# fastapi_monitoring

./: .gitignore  Dockerfile  QUESTIONS_AND_ANSWERS.md  README.md  docker-compose.yml  locustfile.py  main.py  pyproject.toml
grafana/provisioning/dashboards/: dashboard.yml  fastapi_dashboard.json  latency_analysis.json  load_testing.json  request_analysis.json
grafana/provisioning/datasources/: datasource.yml
